style: add text truncation for long input content and minor css fixes

--- a/src/styleSheets/addressSearch.module.css
+++ b/src/styleSheets/addressSearch.module.css
@@ -11,6 +11,11 @@
   width: 100%;
 }
 
+.inputWrapper input {
+  padding-right: 2rem;
+  text-overflow: ellipsis;
+}
+
 .searchIcon {
   position: absolute;
   top: 50%;
@@ -36,7 +41,7 @@
 
 .clearIcon {
   position: absolute;
-  right: 7rem;
+  right: 6.5rem;
   top: 50%;
   transform: translateY(-50%);
   font-size: 1.2rem;
@@ -143,5 +148,9 @@
   .searchIcon {
     top: 1.5rem;
     left: 0;
+  }
+
+  .inputWrapper input {
+    padding-right: 4.5rem;
   }
 }
